<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="#efcaca">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/moviename"
        android:id="@+id/textView1"
        android:minLines="5"
        android:maxLines="10"
        android:inputType="textShortMessage"
        android:editable="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:maxLines="10"
        android:hint="@string/actor"
        android:id="@+id/textView2"
        android:inputType="textMultiLine" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:maxLines="10"
        android:hint="@string/plot"
        android:id="@+id/textView3"
        android:inputType="textMultiLine" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:maxLines="10"
        android:hint="@string/genre"
        android:id="@+id/textView4"
        android:inputType="textShortMessage" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:maxLines="10"
        android:hint="@string/released"
        android:id="@+id/textView5"
        android:inputType="date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rated"
        android:id="@+id/textView6"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:maxLines="10"
        android:hint="@string/year"
        android:id="@+id/textView7"
        android:inputType="number" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:onClick="add"
        android:text="Add to database" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/play"
        android:onClick="play"/>

</LinearLayout>
    </ScrollView>